--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
